[package]
name = "thw-subscriber"
version = "0.1.0"
authors = ["Cokemonkey11"]
description = "Cool app"
license = "MIT"
autoexamples = true
edition = "2018"

[badges]

[dependencies]
tui = { version = "0.9.5", features = ["crossterm"]}
bitflags = "1.0"
cassowary = "0.3"
itertools = "0.9"
either = "1.5"
unicode-segmentation = "1.2"
unicode-width = "0.1"
crossterm = "0.17"
serde = { version = "1", "optional" = true, features = ["derive"]}
rand = "0.7"
argh = "0.1"

[[example]]
name = "crossterm_demo"
path = "examples/crossterm_demo.rs"
